Issue/Question for Adon - I can't figure out how to stretch the image across the entire page, I've tried a couple of ways but nothing is getting the result I'm looking for

--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,16 @@ body {
     line-height: 1.6em;
     overflow: auto;
     background-color: f0ebe1;
-    background-repeat: no-repeat;
 
+}
+
+.topmakeup {
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+
+    /*Question for Adon - Want to make the image stretch for the whole page*/
 
 }
 
